--- a/burger-queen/src/app/components/ticket-order/ticket-order.component.html
+++ b/burger-queen/src/app/components/ticket-order/ticket-order.component.html
@@ -21,10 +21,8 @@
             <span id="clientName" class="clientName"> PANCHITO FLORES</span>
         </div>
         <div class="contBtnOrder">
-            <button type="button" id="idCheckOrder" class="checkOrder">VER</button> -->
-            <!-- <button type="button" id="idDeliveredOrder" class="deliveredOrder">ENTREGADO</button> -->
-        <!-- </div>
+            <button type="button" id="idCheckOrder" class="checkOrder">VER</button>
+            <button type="button" id="idDeliveredOrder" class="deliveredOrder">ENTREGADO</button>
+        </div>
     </div>
 </section> -->
-<!-- REVISAR TYPE BUTTON DE LOS BOTONES
-    REVISAR ID DE LOS HTML  -->
