--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -1,4 +1,4 @@
-.contTickets {
+.contTickets, .contStatusList {
     display: flex;
     flex-direction: column;
 }
@@ -8,6 +8,7 @@
     justify-content: center;
     width: 100%;
     height: 6vh;
+    gap: 2rem;
 }
 
 .btnDeliveredOrders {
@@ -17,14 +18,21 @@
     font-family: 'Slackey', cursive;
     margin-top: 1rem;
     color: #fff;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     font-size: medium;
-    background-color: #00CED1;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #FFB307;
+    box-shadow: 0 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.25);
     width: 25%;
     height: 100%;
     border: none;
     border-radius: 0.5rem;
+}
+
+.btnSelected{
+    background-color: #00CED1;
+    color: #fff;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .btnDeliveredOrders > span {
