--- a/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
+++ b/burger-queen/src/app/components/view-waiter-order/view-waiter-order.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="contFooterResumen">
                 <span class="totalCash">Total= ${{totalPrice}}</span>
-                <button id="sendOrder" class="btn">ENVIAR ORDEN</button>
+                <button #SendOrder id="sendOrder" class="btn" (click)="sendOrder()">ENVIAR ORDEN</button>
             </div>
         </div>
     </section>
