--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.html
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.html
@@ -1,44 +1,53 @@
 <app-header-waiter></app-header-waiter>
 <section class="contTickets">
-    <div class ="contBtnDeliveredOrders">
-        <button #btnDelivered type="button" (click)="showDelivered()" class="btnDeliveredOrders">
-           <span>PEDIDOS ENTREGADOS </span>
-           <div class="contImg">
-             <img src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png" alt="icono de entregado">
-           </div>
-        </button>
-        <button #btnStatusList type="button" (click)="showStatusList()" class="btnDeliveredOrders btnSelected">
-            <span>ESTADO DE PEDIDOS</span>
-            <div class="contImg">
-              <img src="https://cdn-icons-png.flaticon.com/512/1584/1584942.png" alt="icono de entregado">
-            </div>
-         </button>
-    </div>
-    <section *ngIf="statusListSwitch">
-        <app-ticket-order></app-ticket-order>
-        <h1>LISTA DE PEDIDOOOOOOOOOOOS</h1>
-        <!-- <app-ticket-order></app-ticket-order>
-        <app-ticket-order></app-ticket-order> -->
+  <div class="contBtnDeliveredOrders">
+    <button #btnDelivered type="button" (click)="showDelivered()" class="btnDeliveredOrders">
+      <span>PEDIDOS ENTREGADOS </span>
+      <div class="contImg">
+        <img src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png" alt="icono de entregado">
+      </div>
+    </button>
+    <button #btnStatusList type="button" (click)="showStatusList()" class="btnDeliveredOrders btnSelectedcd burg  ">
+      <span>ESTADO DE PEDIDOS</span>
+      <div class="contImg">
+        <img src="https://cdn-icons-png.flaticon.com/512/1584/1584942.png" alt="icono de entregado">
+      </div>
+    </button>
+  </div>
+  <section *ngIf="deliveredSwitch ">
+    <section class="contTicketOrder" *ngFor="let order of menu">
+      <div class="contStatusOrder">
+        <span id="statusOrder" class="statusOrder">{{order.statusOrder}}</span>
+      </div>
+      <div class="contInfoOrder">
+        <div class="contInfoClient">
+          <span id="clientName" class="clientName">{{order.clientName}}</span>
+        </div>
+        <div class="contBtnOrder">
+          <button type="button" id="idCheckOrder" class="checkOrder">VER</button>
+          <!-- <button type="button" id="idDeliveredOrder" class="deliveredOrder">ENTREGADO</button> -->
+        </div>
+      </div>
     </section>
-</section>
-<section class="contStatusList" *ngIf="deliveredSwitch">
-    <h1>PEDIDOS ENTREGADOOOOOOOOOOOOS</h1>
-    <!-- <div class ="contBtnDeliveredOrders">
-        <button type="button" (click)="showDelivered()" class="btnDeliveredOrders">
-            <span>PEDIDOS ENTREGADOS </span>
-            <div class="contImg">
-              <img src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png" alt="icono de entregado">
-            </div>
-         </button>
-        <button type="button" (click)="showStatusList()" class="btnDeliveredOrders">
-           <span>ESTADO DE PEDIDOS</span>
-           <div class="contImg">
-             <img src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png" alt="icono de entregado">
-           </div>
-        </button>
-    </div> -->
-        <app-ticket-order></app-ticket-order>
-        <!-- <app-ticket-order></app-ticket-order>
+  </section>
+  <!-- <app-ticket-order></app-ticket-order> -->
+  <!-- <app-ticket-order></app-ticket-order>
         <app-ticket-order></app-ticket-order> -->
 </section>
+<section *ngIf="statusListSwitch">
+  <section class="contStatusList contTicketOrder" *ngFor="let order of menu">
+    <div class="contStatusOrder">
+      <span id="statusOrder" class="statusOrder">{{order.statusOrder}}</span>
+    </div>
+    <div class="contInfoOrder">
+      <div class="contInfoClient">
+        <span id="clientName" class="clientName">{{order.clientName}}</span>
+      </div>
+      <div class="contBtnOrder">
+          <button type="button" id="idCheckOrder" class="checkOrder">VER</button>
+          <button type="button" id="idDeliveredOrder" class="deliveredOrder">ENTREGADO</button>
+      </div>
+  </div>
 
+  </section>
+</section>
