--- a/burger-queen/src/app/components/header-waiter/header-waiter.component.html
+++ b/burger-queen/src/app/components/header-waiter/header-waiter.component.html
@@ -7,7 +7,7 @@
             <h1>Burger Queen</h1>
         </div>
         <div class="contBtnsHeader">
-            <button #btnTakeOrder type="button" (click)="goToTakeOrder()" class="btn btnSelected">TOMAR ORDEN</button>
+            <button #btnTakeOrder type="button" (click)="goToTakeOrder()" class="btnSelected btn">TOMAR ORDEN</button>
             <button #btnListOrder type="button" (click)="goToStatusList()" class="btn">LISTA DE PEDIDOS</button>
         </div>
     </nav>
