--- a/burger-queen/src/app/components/name-client/name-client.component.html
+++ b/burger-queen/src/app/components/name-client/name-client.component.html
@@ -7,7 +7,7 @@
             </h2>
         </div>
         <div class="client clientInput">
-            <input [(ngModel)]="clientName" type="text" maxlength="12" id="nameClient" class="inputNameClient" placeholder=" EJEMPLO:  MARITA FLORES" autofocus>
+            <input [(ngModel)]="clientName" type="text" maxlength="12" id="nameClient" class="inputNameClient" placeholder="NOMBRE DEL CLIENTE" autofocus>
         </div>
 
         <div class="client" *ngIf="clientName !==''">
