se actualizan los estilos de los botones en los tickets

--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -105,6 +105,7 @@
     font-family: "Slackey", cursive;
     color: #fff;
     font-size: medium;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     background-color: #FFB307;
 }
 
