Se agrega el estilo a las ordenes de los pedidos segun su estado

--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -113,7 +113,11 @@
     background-color: #00CED1;
 }
 
-.spanDeliveredOrder {
+.contDeliveredOrder {
     color: #000000;
     background-color: #C3A983;
+}
+
+.contReadyOrder {
+    background-color: #36D100;
 }
