--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.html
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.html
@@ -33,7 +33,7 @@
   <section>
     <section class="contTickets" *ngIf="deliveredSwitch">
       <section class="contTicketOrder" *ngFor="let order of statusMenu">
-        <div  class="contStatusOrder">
+        <div  class="contStatusOrder" [ngClass]="{'contDeliveredOrder': order.statusOrder === 'ENTREGADO'}" >
           <span #statusOrder id="statusOrder" class="statusOrder">{{ order.statusOrder }}</span>
         </div>
         <div class="contInfoOrder">
@@ -50,7 +50,7 @@
     </section>
     <section class="contTickets" *ngIf="statusListSwitch">
       <section class="contTicketOrder" *ngFor="let order of statusMenu">
-        <div class="contStatusOrder">
+        <div class="contStatusOrder" [ngClass]="{'contReadyOrder': order.statusOrder === 'PREPARADO'}">
           <span id="statusOrder" class="statusOrder">{{ order.statusOrder }}</span>
         </div>
         <div class="contInfoOrder">
