se agrega modal de envío exitoso y se comienza función de botón entregado en las ordenes

--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.html
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.html
@@ -80,7 +80,7 @@
               id="idDeliveredOrder"
               class="deliveredOrder"
               *ngIf="order.statusOrder === 'PREPARADO'"
-              (click)="btnDeliveredOrder(order.statusOrder)"
+              (click)="btnDeliveredOrder(order)"
             >
               ENTREGADO
             </button>
