--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -82,7 +82,7 @@
 
 }
 
-.clientName {
+.clientNameTicket {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: x-large;
@@ -109,6 +109,7 @@
     background-color: #FFB307;
 }
 
+
 .deliveredOrder {
     background-color: #00CED1;
 }
@@ -121,3 +122,101 @@
 .contReadyOrder {
     background-color: #36D100;
 }
+
+/* <<<<<<<<<<<<<<<< AQUI COMIENZAN EL MODAL CON EL RESUMEN DE ORDEN >>>>>>>>>>>>>>>>>>>>>>>>*/
+
+.contResumen {
+    display: flex;
+    flex-direction: column;
+    height: 75%;
+    width: 50%;
+    margin: 0 auto;
+    background: rgba(195, 169, 131, 0.9);
+    border-radius: 0.5rem;
+    position: absolute;
+    top: 54.3%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.contClient {
+    display: flex;
+    height: 15%;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem ;
+}
+
+.totalCash, .contClient > span, .checkOrder > span {
+    font-size: x-large;
+}
+
+.clientTxt {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: x-large;
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+}
+
+.clientName, .btn, .totalCash {
+    display: flex;
+    background-color: #fff;
+    width: 40%;
+    height: 60%;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+    border-radius: 1rem;
+    border-style: none;
+    color: #000;
+    font-size: medium;
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    font-family: "Slackey", cursive;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .clientName {
+    font-size: xx-small;
+    width: 50%;
+  }
+
+  .contItemsOrder {
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.45);
+    border-radius: 0.5rem;
+    width: 90%;
+    height: 80%;
+    margin: auto;
+  }
+
+  .orderResumen {
+    width: 100%;
+    height: 88%;
+    overflow: scroll;
+  }
+
+  .contFooterResumen {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 10%;
+  }
+
+  .totalCash {
+    display: flex;
+    background-color: #fff;
+    width: 40%;
+    height: 100%;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+    border-radius: 1rem;
+    border-style: none;
+    color: #000;
+    font-size: x-large; 
+    text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    font-family: "Slackey", cursive;
+    align-items: center;
+    justify-content: center;
+  }
