--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -105,13 +105,18 @@
     font-family: "Slackey", cursive;
     color: #fff;
     font-size: medium;
-    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
     background-color: #FFB307;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
 }
 
 
 .deliveredOrder {
     background-color: #00CED1;
+}
+
+.cancelOrder {
+    background-color: #BC0000;
 }
 
 .contDeliveredOrder {
@@ -131,8 +136,9 @@
     height: 75%;
     width: 50%;
     margin: 0 auto;
-    background: rgba(195, 169, 131, 0.9);
+    background: rgba(195, 169, 131);
     border-radius: 0.5rem;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 25%);
     position: absolute;
     top: 54.3%;
     left: 50%;
@@ -192,7 +198,7 @@
 
   .orderResumen {
     width: 100%;
-    height: 88%;
+    height: 85%;
     overflow: scroll;
   }
 
@@ -202,6 +208,7 @@
     justify-content: space-around;
     width: 100%;
     height: 10%;
+    padding: 0.8rem 0.01rem;
   }
 
   .totalCash {
@@ -220,3 +227,118 @@
     align-items: center;
     justify-content: center;
   }
+
+  /* <<<<<<<<<<<<<<<< AQUI COMIENZAN EL RESUMEN DE ORDEN >>>>>>>>>>>>>>>>>>>>>>>>*/
+
+  .contItemReceipt {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 1rem;
+}
+
+.titleOrder {
+    display: flex;
+    width: 93.8%;
+    margin: 1rem 1rem 0.8rem 1rem;
+    border-bottom: dotted;
+    background: rgba(255, 255, 255, 0.45);
+    border-radius: 0.5rem 0.5rem 0;
+    border-width: .3rem;
+    border-color: rgba(195, 169, 131);
+}
+
+.titleOrder > span {
+    font-size: larger;
+}
+
+.spanCant, .spanProd, .spanPrice {
+    width: 15%;
+    line-height: 5vh;
+    margin: auto;
+    text-align: center;
+    border-right: dotted;
+    border-width: .3rem;
+    border-color: rgba(195, 169, 131);
+}
+
+.spanProd {
+    width: 60%;
+    text-align: left;
+    padding-left: 0.5rem;
+}
+
+.spanPrice {
+    border: none;
+}
+
+
+.itemDescription {
+    display: flex;
+    width: 100%;
+    border-bottom: dotted;
+    border-width: .3rem;
+    border-color: rgba(195, 169, 131);
+}
+
+.totalItems, .itemStyle {
+    font-size: large;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+.contCounter {
+    display: flex;
+    width: 25%;
+    height: 6vh;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+.btnRemove, .btnAdd {
+    background-color: transparent;
+    border: none;
+}
+
+.iconsCounter {
+    width: 50%;
+    height: auto;
+}
+
+/* <<<<<<<<<<<<<<<< AQUI COMIENZAN EL MODAL DE CANCELAR LA ORDEN >>>>>>>>>>>>>>>>>>>>>>>>*/
+.modalTotalVoid, .modalTotalVoid > div {
+    display: flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50vw;
+    height: 30vh;
+    background: rgba(195, 169, 131, 1);
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 0.5rem;
+    position: absolute;
+    align-items: center;
+  }
+  .modalTotalVoid > h1 {
+    font-family: "Slackey", cursive;
+    text-align: center;
+    color: white;
+    height: 50%;
+    font-size: xx-large;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
+  }
+
+  .modalTotalVoid > div {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .modalTotalVoid > div > button {
+    margin-top: -2rem;
+    height: 20%;
+  }
+
+  /* PENDIENTE MODIFICAR EL ESTILO DEL DIV DE LA LINEA 98 */
