--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.html
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.html
@@ -1,35 +1,57 @@
 <app-header-waiter></app-header-waiter>
 <section>
   <div class="contBtnDeliveredOrders">
-    <button #btnDelivered type="button" (click)="showDelivered()" class="btnDeliveredOrders">
+    <button
+      #btnDelivered
+      type="button"
+      (click)="showDelivered()"
+      class="btnDeliveredOrders"
+    >
       <span>PEDIDOS ENTREGADOS </span>
       <div class="contImg">
-        <img src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png" alt="icono de entregado" />
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/3081/3081371.png"
+          alt="icono de entregado"
+        />
       </div>
     </button>
-    <button #btnStatusList type="button" (click)="showStatusList()" class="btnDeliveredOrders btnSelectedcd burg">
+    <button
+      #btnStatusList
+      type="button"
+      (click)="showStatusList()"
+      class="btnDeliveredOrders btnSelectedcd burg"
+    >
       <span>ESTADO DE PEDIDOS</span>
       <div class="contImg">
-        <img src="https://cdn-icons-png.flaticon.com/512/1584/1584942.png" alt="icono de entregado" />
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/1584/1584942.png"
+          alt="icono de entregado"
+        />
       </div>
     </button>
   </div>
   <section>
     <section class="contTickets" *ngIf="deliveredSwitch">
       <section class="contTicketOrder" *ngFor="let order of statusMenu">
-        <div class="contStatusOrder" [ngClass]="{ contDeliveredOrder: order.statusOrder === 'ENTREGADO' }">
+        <div
+          class="contStatusOrder"
+          [ngClass]="{ contDeliveredOrder: order.statusOrder === 'ENTREGADO' }"
+        >
           <span #statusOrder id="statusOrder" class="statusOrder">{{
             order.statusOrder
-            }}</span>
+          }}</span>
         </div>
         <div class="contInfoOrder">
           <div class="contInfoClient">
-            <span class="clientNameTicket">{{
-              order.clientName
-              }}</span>
+            <span class="clientNameTicket">{{ order.clientName }}</span>
           </div>
           <div class="contBtnOrder">
-            <button (click)="openModalOrder(order)" type="button" id="idCheckOrder" class="checkOrder">
+            <button
+              (click)="openModalOrder(order)"
+              type="button"
+              id="idCheckOrder"
+              class="checkOrder"
+            >
               VER
             </button>
           </div>
@@ -38,34 +60,57 @@
     </section>
     <section class="contTickets" *ngIf="statusListSwitch">
       <section class="contTicketOrder" *ngFor="let order of statusMenu">
-        <div class="contStatusOrder" [ngClass]="{ contReadyOrder: order.statusOrder === 'PREPARADO' }">
+        <div
+          class="contStatusOrder"
+          [ngClass]="{ contReadyOrder: order.statusOrder === 'PREPARADO' }"
+        >
           <span id="statusOrder" class="statusOrder">{{
             order.statusOrder
-            }}</span>
+          }}</span>
         </div>
         <div class="contInfoOrder">
           <div class="contInfoClient">
-            <span class="clientNameTicket">{{
-              order.clientName
-              }}</span>
+            <span class="clientNameTicket">{{ order.clientName }}</span>
           </div>
           <div class="contBtnOrder">
-            <button (click)="openModalOrder(order)" type="button" id="idCheckOrder" class="checkOrder">
+            <button
+              (click)="openModalOrder(order)"
+              type="button"
+              id="idCheckOrder"
+              class="checkOrder"
+            >
               VER
             </button>
-            <button type="button" class="deliveredOrder" *ngIf="order.statusOrder === 'PREPARADO'"
-              (click)="btnDeliveredOrder(order)">
+            <button
+              type="button"
+              class="deliveredOrder"
+              *ngIf="order.statusOrder === 'PREPARADO'"
+              (click)="btnDeliveredOrder(order)"
+            >
               ENTREGADO
             </button>
-            <button type="button" class="deliveredOrder cancelOrder" *ngIf="order.statusOrder === 'PENDIENTE'"
-            (click)="openModalCancelOrder()">
-            CANCELAR
-          </button>
+            <button
+              type="button"
+              class="deliveredOrder cancelOrder"
+              *ngIf="order.statusOrder === 'PENDIENTE'"
+              (click)="openModalCancelOrder()"
+            >
+              CANCELAR
+            </button>
           </div>
         </div>
+        <!-- MODAL DE ACEPTAR O CANCELAR EL BORRADO DE LA ORDEN -->
+        <section *ngIf="modalCancelOrder" class="modalTotalVoid">
+          <h1>¿Desea cancelar la orden?</h1>
+          <div class="contAceptOrCancelOrder">
+            <button class="btn" (click)="btnDeleteOrder(order)">SI</button>
+            <button class="btn" (click)="closeModalCancelOrder()">NO</button>
+          </div>
+        </section>
       </section>
     </section>
-    <!-- Aqui empieza el modal resumen de la orden -->
+    
+    <!-- AQUI EMPIEZA EL MODAL RESUMEN DE LA ORDEN -->
     <section class="contResumen" *ngIf="modalOrder">
       <div class="contClient">
         <div class="clientTxt">CLIENTE:</div>
@@ -80,25 +125,23 @@
           </div>
           <section class="contItemReceipt" *ngFor="let item of fullOrder">
             <div class="itemDescription">
-              <span class="itemStyle spanCant">{{item.cont}}</span>
-              <span class="itemStyle spanProd">{{item.product}}</span>
-              <span class="itemStyle spanPrice">${{item.subTotal}}</span>
+              <span class="itemStyle spanCant">{{ item.cont }}</span>
+              <span class="itemStyle spanProd">{{ item.product }}</span>
+              <span class="itemStyle spanPrice">${{ item.subTotal }}</span>
             </div>
           </section>
         </div>
         <div class="contFooterResumen">
-          <span class="totalCash">Total= ${{total}}</span>
-          <button (click)="closeModalOrder()" id="closeDetail" class="checkOrder">ACEPTAR</button>
+          <span class="totalCash">Total= ${{ total }}</span>
+          <button
+            (click)="closeModalOrder()"
+            id="closeDetail"
+            class="checkOrder"
+          >
+            ACEPTAR
+          </button>
         </div>
       </div>
     </section>
   </section>
-  <section  *ngIf="modalCancelOrder" class="modalTotalVoid">
-        <h1>¿Desea cancelar la orden?</h1>
-        <div> 
-          <!-- PENDIENTE MODIFICAR EL ESTILO DEL DIV DE LA LINEA 98 -->
-          <button class="btn">SI</button>
-          <button class="btn" (click)="closeModalCancelOrder()">NO</button>
-        </div>
-    </section>
 </section>
