--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -164,7 +164,7 @@
     text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 
-.clientName, .btn, .totalCash, .btnCancelorAcceptOrder {
+.clientName, .btn, .totalCash {
     display: flex;
     background-color: #fff;
     width: 40%;
@@ -228,6 +228,9 @@
     justify-content: center;
   }
 
+  .btnCancelorAcceptOrder {
+
+  }
   /* <<<<<<<<<<<<<<<< AQUI COMIENZAN EL RESUMEN DE ORDEN >>>>>>>>>>>>>>>>>>>>>>>>*/
 
   .contItemReceipt {
@@ -315,7 +318,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50vw;
-    height: 30vh;
+    height: 3vh;
     background: rgba(195, 169, 131, 1);
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
     border-radius: 0.5rem;
@@ -329,7 +332,7 @@
     width: 100%;
     align-items: flex-start;
     justify-content: space-around;
-    background-color: red;
+    
   }
 
   .contAceptOrCancelOrder > button {
