se crea componente chef y se agrega estilos a las órdenes de cocina

--- a/burger-queen/src/app/components/welcome/welcome.component.html
+++ b/burger-queen/src/app/components/welcome/welcome.component.html
@@ -8,7 +8,7 @@
       <button #waiterBtn type="button" class="btn btnWaiter" (click)="changeViewClientName()">MESERO</button>
     </div>
     <div class="contbtnChef">
-      <button type="button" class="btn btnChef">JEFE DE COCINA</button>
+      <button type="button" class="btn btnChef" (click)="changeViewChef()">JEFE DE COCINA</button>
     </div>
   </div>
 </section>
