--- a/burger-queen/src/app/components/chef/chef.component.css
+++ b/burger-queen/src/app/components/chef/chef.component.css
@@ -1,6 +1,5 @@
 .contChefView {
     display: flex;
-    background: red;
     height: 80vh;
     padding: 1rem;
     flex-wrap: wrap;
@@ -42,7 +41,7 @@
     text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 
-.clientName {
+.timer,.btn {
     display: flex;
     background-color: #fff;
     width: 40%;
@@ -52,15 +51,22 @@
     border-style: none;
     color: #000;
     font-size: medium;
-    cursor: pointer;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+    font-family: "Slackey", cursive;
     align-items: center;
     justify-content: center;
   }
 
-  .clientName {
+  .btn {
+    color: #fff;
+    font-size: x-large;
+    background-color: #FFB307;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
+  }
+  
+  .timer {
     font-size: xx-small;
     width: 50%;
   }
@@ -122,8 +128,7 @@
 
 .spanCant, .spanProd {
     width: 20%;
-    line-height: 5vh;
-    margin: auto;
+    margin: 0.5rem auto;
     text-align: center;
     border-right: dotted;
     border-width: .3rem;
@@ -149,11 +154,50 @@
   border: none;
   border-radius: 0.5rem;
   height: 100%;
-  width: 55%;
+  width: auto;
+  padding: 0 1rem;
   font-family: "Slackey", cursive;
   color: #fff;
   font-size: x-large;
   background-color: #FFB307;
   text-shadow: 0 0 6px #000000, 0 0 2px #000000;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+}
+
+/* <<<<<<<<<<<<<<<< AQUI COMIENZAN EL MODAL DE CANCELAR LA ORDEN >>>>>>>>>>>>>>>>>>>>>>>>*/
+.modalTotalVoid{
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50vw;
+  height: 33vh;
+  background: rgba(195, 169, 131, 1);
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
+  position: absolute;
+  align-items: center;
+}
+
+.contAceptOrCancelOrder {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: flex-start;
+  justify-content: space-around;
+  
+}
+
+.contAceptOrCancelOrder > button {
+  font-size: x-large;
+}
+
+.modalTotalVoid > h1 {
+  font-family: "Slackey", cursive;
+  text-align: center;
+  color: white;
+  height: 50%;
+  font-size: xx-large;
+  text-shadow: 0 0 6px #000000, 0 0 2px #000000;
 }
