--- a/burger-queen/src/app/components/container-tickets/container-tickets.component.css
+++ b/burger-queen/src/app/components/container-tickets/container-tickets.component.css
@@ -175,12 +175,17 @@
     color: #000;
     font-size: medium;
     text-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
-    cursor: pointer;
     font-family: "Slackey", cursive;
     align-items: center;
     justify-content: center;
   }
 
+  .btn {
+    color: #fff;
+    font-size: x-large;
+    background-color: #FFB307;
+    text-shadow: 0 0 6px #000000, 0 0 2px #000000;
+  }
   .clientName {
     font-size: xx-small;
     width: 50%;
