se agrega cronometro para las ordenes

--- a/burger-queen/src/app/components/chef/chef.component.html
+++ b/burger-queen/src/app/components/chef/chef.component.html
@@ -7,7 +7,7 @@
         <div class="clientTxt">Fecha: {{ order.date }}</div>
         <div class="clientTxt">Hora: {{ order.hour }}</div>
       </div>
-      <span class="timer">{{ order.clientName }}</span>
+      <span class="timer">{{hours}}:{{minutes}}:{{seconds}}</span>
     </div>
     <div class="contItemsOrder">
       <div class="orderResumen">
